public/css/base.css
html, body {
  position: relative;
  margin: 0;
  padding: 0;
  min-height: 100vh;
  height: 100%;
  max-width: 100vw;
  background-color: var(--color-white);
}

body {
  opacity: 0;

  &.loaded {
    opacity: 1;
    transition: opacity 0.5s;
  }
}

